@@ -25,6 +25,7 @@
   * [Uninstall-PerformanceCounterCategory](http://get-carbon.org/help/Uninstall-PerformanceCounterCategory.html)
   * [Complete-Jobs](http://get-carbon.org/help/Complete-Jobs.html)
   * [Get-PowershellPath](http://get-carbon.org/help/Get-PowershellPath.html)
+  * [Invoke-PowerShell](http://get-carbon.org/help/Invoke-PowerShell.html)
 * Improved whitespace in HTML documentation code samples.
 
 
